Working Coin Flip Game

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 	<body>
 
 
-		<img id="heads" src="img\united-states-quarter-front.svg" alt="">
-		<img id="tails" src="img\us-public-school-system.svg" alt="">
+		<img id="heads" src="img/united-states-quarter-front.svg" alt="">
+		<img id="tails" src="img/us-public-school-system.svg" alt="">
 		<button type="button" name="button">Flip Coin</button>
 
 
